# shesha

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_PYPI.md  codemeta.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  draft-pdf.yml  test.yml
docs/: changelog.rst  citation.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: bio.rst  core.rst  sim.rst
docs/guide/: bio.rst  bootstrap_ci.rst  drift.rst  sim.rst  supervised.rst  unsupervised.rst
examples/: anndata_advanced_stability.py  similarity_comparison.py  tutorial.py
paper/: paper.bib  paper.md
shesha/: __init__.py  _utils.py  bio.py  core.py  sim.py
tests/: __init__.py  test_anndata_integration.py  test_bio.py  test_bootstrap_ci.py  test_core.py  test_crispr.py  test_new_features.py  test_similarity.py  test_split_half.py  test_v020_features.py
tutorials/: crispr_split_half_tutorial.ipynb  crispr_tutorial.ipynb  drift_tutorial.ipynb  llm_embeddings_tutorial.ipynb  steering_vectors_tutorial.ipynb  training_drift_tutorial.ipynb  vision_models_tutorial.ipynb
