[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shesha-geometry"
version = "0.2.26"
description = "Self-consistency metrics for representational stability analysis"
readme = "README_PYPI.md"
license = "MIT"
authors = [
    {name = "Prashant Raju", email = "rajuprashant@gmail.com"}
]

keywords = [
    "shesha",     
    "geometry",    
    "representation learning",
    "representation analysis",
    "neural networks", 
    "geometric stability",
    "geometric analysis",
    "manifold analysis",
    "latent space",
    "single-cell",
    "crispr",
    "perturb-seq",
    "anndata",
    "functional genomics",
    "phenotypic stability",
    "computational biology",
    "scanpy",
    "llm alignment",
    "concept drift",
    "model steering",
    "ai safety",
    "interpretability",
    "perturbation analysis"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
]

[project.optional-dependencies]
bio = [
    "anndata>=0.8",
    "scikit-learn>=1.0",
]
loess = [
    "statsmodels>=0.13",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "anndata>=0.8",
    "scikit-learn>=1.0",
    "statsmodels>=0.13",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/prashantcraju/shesha"
Documentation = "https://shesha-geometry.readthedocs.io/en/latest/"
Repository = "https://github.com/prashantcraju/shesha"
Issues = "https://github.com/prashantcraju/shesha/issues"


[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
